# mba-esia-full-cycle

./: .gitignore  README.md
technical-challenges/ingestion_and_semantic_search_with_langchain_and_postgres/: Makefile  README.md  pyproject.toml  requirements.txt
technical-challenges/ingestion_and_semantic_search_with_langchain_and_postgres/src/: chat.py  config.py  ingest.py  search.py
